chore(release): CoronaPoker 23.60 (restore v23.55 stable baseline)